--- a/Capa(Relatorio).tex
+++ b/Capa(Relatorio).tex
@@ -1,7 +1,6 @@
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Relatório Final - Projeto de Pesquisa
-%Métodos de Otimização
+% Métodos de Otimização
 % Baltz & Machado
 % Capa
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -24,7 +23,7 @@
 
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newpage
 
@@ -35,7 +34,7 @@ $\propto$
 \end{center}
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \newpage
@@ -59,59 +58,15 @@ $\propto$
 \vspace{5cm}
 
 \begin{center}
-{\Large\textit{Baltz}}\\
-{\Large\textit{Machado}}\\
-{\Large\textit{Gersonilo Oliveira da Silva}}
+{\Large\textit{Mateus Baltazar de Almeida}} \\
+{\Large\textit{Matheus Machado Vieira}} \\
+{\Large\textit{Orientador: Gersonilo Oliveira da Silva}}
 \end{center}
 
 
-\newpage 
+\newpage
 
-
-%\thispagestyle{empty}
-%
-%\begin{center}
-%$\propto$
-%\end{center}
-%
-%\vspace{10cm}
-%
-%
-%\begin{array}{c}
-%
-%\textbf{Dados \hspace{0.2cm} Internacionais \hspace{0.2cm} de \hspace{0.2cm} Catalogação \hspace{0.2cm} da \hspace{0.2cm} Fonte.} \\
-%
-%\begin{tabular}{|c| p{8cm} | p{8cm}}
-%\hline
-%
-%\begin{flushleft}
-%B897a  \hspace{1cm} Gersonilo Oliveira da Silva
-%\end{flushleft}
-%\\
-     %\hspace{1.5cm}		Geometria Analítica. Gersonilo Oliveira da Silva. 1º edição. Garanhuns. 2020.\\\\\\
-							%
-		 %
-		 %\begin{flushleft}
-		 %ISBN 1234566788-999
-		 %\end{flushleft}
-			%\\\\\\
-										%
-		%
-			%\hspace{0.8cm} 1. Matemática 2. Álgebra Linear I. Título	\\\\
-				
-				                                           
-																									
-																						%\hspace{4cm} CDD 9999999 \\
-				                                            %
-																						%\hspace{4cm} CDU 9999999-999 \\
-%
-%\hline
-%
-%\end{tabular}
-%
-%\end{array}
-
-\newpage 
+\newpage
 
 
 \thispagestyle{empty}
@@ -120,7 +75,7 @@ $\propto$
 $\propto$
 \end{center}
 
-\newpage 
+\newpage
 
 
 \thispagestyle{empty}
