--- a/Capitulo1(Relatorio).tex
+++ b/Capitulo1(Relatorio).tex
@@ -12,6 +12,16 @@
 \section{{O Conceito de Otimização}}
 
 \hspace{0.8cm}
+Diz-se otimização, o processo que tem como objetivo encontrar condições que
+minimizam ou maximizam algo (seja dinheiro, tempo, quantidade, etc). Sendo este, muitas vezes um trabalho árduo,
+custoso.
+
+Dessa maneira, na matemática, este processo é amplamente utilizado quando
+busca-se valores pertencentes ao conjunto \textit{A} (que pode ter
+restrições), com o objetivo de encontrar uma solução ótima, aplicando os valores
+de \textit{A} em numa função objetivo predefinida.
+
+
 
 \section{{Otimização de Funções à Uma variável real}}
 
