Definições por funções mini e maximização

--- a/Capitulo1(Relatorio).tex
+++ b/Capitulo1(Relatorio).tex
@@ -13,14 +13,47 @@
 
 \hspace{0.8cm}
 Diz-se otimização, o processo que tem como objetivo encontrar condições que
-minimizam ou maximizam algo (seja dinheiro, tempo, quantidade, etc). Sendo este, muitas vezes um trabalho árduo,
-custoso.
+minimizam ou maximizam algo (seja dinheiro, tempo, quantidade, etc). Sendo este,
+muitas vezes um trabalho árduo, custoso.
 
 Dessa maneira, na matemática, este processo é amplamente utilizado quando
 busca-se valores pertencentes ao conjunto \textit{A} (que pode ter
 restrições), com o objetivo de encontrar uma solução ótima, aplicando os valores
 de \textit{A} em numa função objetivo predefinida.
 
+Podendo assim, serem representadas da seguinte forma:
+
+	Dada a função
+	\begin{equation}
+		f : A \rightarrow \mathbb{Z}
+	\end{equation}
+
+	\begin{itemize}
+		\item Maximização pode ser definida como:
+	\end{itemize}
+
+		% TODO: Porque 'que satisfaz' está ficando errado?
+		busca pelo elemento \textit{x_0} \in \textit{A}, que satisfaz:
+
+			\begin{equation}
+				f(x_0) \geq f(x);
+			\end{equation}
+
+		para todo x \in \textit{A}.\\
+
+
+	\begin{itemize}
+		\item Minimização pode ser definida como:
+	\end{itemize}
+
+		% TODO: Porque 'que satisfaz' está ficando errado?
+		busca pelo elemento \textit{x_0} \in \textit{A}, que satisfaz:
+
+			\begin{equation}
+				f(x_0) \leq f(x);
+			\end{equation}
+
+		para todo x \in \textit{A}.
 
 
 \section{{Otimização de Funções à Uma variável real}}
