--- a/Capitulo1(Relatorio).tex
+++ b/Capitulo1(Relatorio).tex
@@ -13,7 +13,7 @@
 
 \hspace{0.8cm}
 Diz-se otimização, o processo que tem como objetivo encontrar condições que
-minimizam ou maximizam algo (seja dinheiro, tempo, quantidade, etc). Sendo este,
+minimizam ou maximizam algo (seja energia, tempo, dinheiro, etc). Sendo este,
 muitas vezes um trabalho árduo, custoso.
 
 Dessa maneira, na matemática, este processo é amplamente utilizado quando
@@ -53,17 +53,58 @@ Podendo assim, serem representadas da seguinte forma:
 				f(x_0) \leq f(x);
 			\end{equation}
 
-		para todo x \in \textit{A}.
+		para todo x \in \textit{A}.\\
+
+
+Com isso, podemos agora entender como esse processo pode ser custoso.
+Começando pelo fato de que existem os pontos máximos e mínimos
+(pontos críticos), locais e globais no espaço das funções. Sendo os pontos
+críticos locais, aqueles que não são os menores ou maiores valores para a
+minimização e maximização, respectivamente. E os pontos globais, aqueles que
+representam o menor ou maior valor no espaço da função, para a minimização e
+maximização, respectivamente.
+
+Criando assim, uma certa incerteza ao encontrar um valor crítico numa função,
+já que é estritamente difícil saber se o ponto crítico encontrado é local ou
+global.Como pode-se perceber na Figura
+\ref{grafico_local_global_pontosCriticos}.
+
+
+\begin{figure}[h]
+	\includegraphics[width=0.43\textwidth]
+	{src/grafico_local_global_pontosCriticos.png}
+	\centering
+	\caption{Exemplo de pontos críticos locais e globais indicados no gráfico
+	de uma função}
+	\label{grafico_local_global_pontosCriticos}
+\end{figure}
+
+
 
 
 \section{{Otimização de Funções à Uma variável real}}
 
 \hspace{0.8cm}
 
+
+
+
+
+
 \section{{Programando o Método}}
 
 \hspace{0.8cm}
 
+
+
+
+
 \textcolor[rgb]{1,0,0}{\section{{Otimização de Funções à Várias Variáveis}}}
 
 \hspace{0.8cm}
+
+
+
+
+
+%
