--- a/Relatorio.tex
+++ b/Relatorio.tex
@@ -3,14 +3,24 @@
 % Gersonilo Oliveira da Silva
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+    %Informações sobre a forma do documento
     \documentclass [a4paper,12pt,brazil]{book}
+
+    % utf8 patrãozão
     \usepackage[utf8]{inputenc}
     \usepackage{multicol}
+
+    % Indicar idioma do texto
     \usepackage[brazil]{babel}
+
     \usepackage{amssymb,amscd,latexsym}
     \usepackage{amsmath}
     \usepackage{color}
     \usepackage{epsfig}
+
+    % Tamanho do texto de descrição das imagens
+    \usepackage[font=footnotesize,labelfont=bf]{caption}
+
     %\usepackage[dvips]{graphicx}
     %\usepackage{srcltx}
 
