Derivada tópico 1.2 - Início

--- a/Capitulo1(Relatorio).tex
+++ b/Capitulo1(Relatorio).tex
@@ -86,8 +86,24 @@ global.Como pode-se perceber na Figura
 
 \hspace{0.8cm}
 
+Evidente que funções possuem as variáveis dependentes (a qual representa o
+objeto da otimização) e variáveis independentes (cujo suas grandezas podem ser
+selecionadas), podemos denotar que, para a função
 
+\begin{equation}
+	y = f(x),
+\end{equation}
+quando buscamos otimizá-la, temos como objetivo encontrar valores que quando
+aplicados à \textit{x}, temos o mínimo ou máximo valor \textit{y} (seja ele
+local, ou preferencialmente global).
 
+Partindo dessa perspectiva, acaba surgindo a necessidade de utilizar algum
+recurso para encontrar o os pontos críticos. E nesse sentindo, pode-se utilizar
+a técnica de \textbf{derivação}, donde, tem como principal recurso, identificar
+tais pontos.
+
+A derivada, é a representação da taxa de variação de uma função em relação a
+um ponto da mesma.
 
 
 
