--- a/Introducao(Relatorio).tex
+++ b/Introducao(Relatorio).tex
@@ -1,10 +1,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Geometria Analítica
-% Gersonilo Oliveira da Silva 
+% Relatório Final - Projeto de Pesquisa
+% Métodos de Otimização
+% Baltz & Machado
 % Introdução
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\pagenumbering{arabic} \setcounter{page}{6} \thispagestyle{empty}
+%\pagenumbering{arabic} \setcounter{page}{6} \thispagestyle{empty}
 \addcontentsline{toc}{section}{{\bf Introdução}}
 \chapter*{\textbf{\LARGE{Introdução}}}
 
