--- a/Relatorio.tex
+++ b/Relatorio.tex
@@ -4,7 +4,26 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
     %Informações sobre a forma do documento
-    \documentclass [a4paper,12pt,brazil]{book}
+    \documentclass [a4paper,12pt,brazil, twoside]{book}
+    \usepackage{geometry}
+
+    %Cabeçalhos e rodapés bonitos
+    \usepackage{fancyhdr}
+    \pagestyle{fancy}
+    \fancyhf{}
+    \fancyhead{}
+    \fancyhead[LE]{\scshape \thepage}
+    \fancyhead[RO]{\scshape \thepage}
+    \fancyhead[RE]{\small \scshape \nouppercase{Baltazar e Machado}}
+    \fancyhead[LO]{\small \scshape \nouppercase{\rightmark}}
+
+    %Tema escuro k
+    \usepackage[dvipsnames]{xcolor}
+    \pagecolor{CadetBlue}
+    \color{white}
+
+    %Codigo
+    \usepackage{listings}
 
     % utf8 patrãozão
     \usepackage[utf8]{inputenc}
@@ -25,6 +44,7 @@
     %\usepackage{srcltx}
 
     \setlength{\oddsidemargin}{0.46cm}
+    \setlength{\evensidemargin}{0.46cm}
     \setlength{\textwidth}{15cm}
     \setlength{\topmargin}{-0.79cm}
     \setlength{\headheight}{0.75cm}
@@ -32,7 +52,7 @@
     \setlength{\textheight}{24cm}
     \setlength{\parindent}{1.0cm}
     \renewcommand{\baselinestretch}{1.1}
-    \pagenumbering{arabic} \setcounter{page}{6}
+    \pagenumbering{arabic} \setcounter{page}{1}
 %    \setlength{\parskip}{0.2 cm}
 
 %    \newtheorem {teorema}{Teorema}[chapter]
@@ -67,20 +87,18 @@
     \newenvironment{proof}[1][\textbf{Demonstração:}\hspace{0.2cm}]{\textit{#1}}{\begin{flushright}\itshape{QED.}\end{flushright}}
 
 
-%\includeonly{ApendiceA}
-
-
 \begin{document}
 
-\pagestyle{headings}
-\include{Capa(Relatorio)}
-\renewcommand{\baselinestretch}{1.0} \thispagestyle{plain}\pagenumbering{arabic} \tableofcontents
-\include{Introducao(Relatorio)}
-\include{Capitulo1(Relatorio)}
-\include{Capitulo2(Relatorio)}
-\include{Capitulo3(Relatorio)}
-\include{Capitulo4(Relatorio)}
-\include{Capitulo5(Relatorio)}
-\include{Refer(Relatorio)}
+    \pagestyle{headings}
+    \include{Capa(Relatorio)}
+    \renewcommand{\baselinestretch}{1.0} \thispagestyle{plain} \tableofcontents
+    %\include{Introducao(Relatorio)} TODO: colocar de volta quando terminar
+    \pagestyle{fancy} % a partir daqui usar os cabeçalhos e rodapés bonitos
+    \include{Capitulo1(Relatorio)}
+    \include{Capitulo2(Relatorio)}
+    \include{Capitulo3(Relatorio)}
+    \include{Capitulo4(Relatorio)}
+    \include{Capitulo5(Relatorio)}
+    \include{Refer(Relatorio)}
 
 \end{document}
