--- a/projetos/rust_newton1x1.tex
+++ b/projetos/rust_newton1x1.tex
@@ -1,4 +1,5 @@
-\begin{lstlisting}[caption=Método de Newton 1 variavel]
+\begin{lstlisting}[caption=Implementação do Método de Newton para uma variável
+  em Rust.]
 pub fn newton1x1<F>(funcao_derivada: &F, x: f64) -> (usize, f64)
 where
     F: Fn(f64) -> f64,
