--- a/Capitulo1(Relatorio).tex
+++ b/Capitulo1(Relatorio).tex
@@ -200,10 +200,10 @@ Os parametros da função são:
     \end{itemize}
 
 
-A função derive1x1 é um função que calcula numericamente a derivada da função
-passada como argumento no ponto também passado como argumento. Esta função é
-apenas para funções \(f : \mathbb{R} \rightarrow \mathbb{R}\) e deve ser escrita
-pelo úsuario como bem entender.
+A função derive1x1 recebe como parametro uma função e um ponto, tendo como
+retorno a derivada da função entregue, no ponto especificado. Restingindo-se
+à funções do tipo \(f : \mathbb{R} \rightarrow \mathbb{R}\), donde deve ser
+escrita pelo úsuario como bem entender.
 
 
 
