--- a/Capitulo1(Relatorio).tex
+++ b/Capitulo1(Relatorio).tex
@@ -160,7 +160,7 @@ a taxa de variação da primeira derivada. Concluindo-se que dada a função
 Considerando que a primeira e segunda derivada são as comunmente utilizadas,
 pode-se agora entender a relação entre elas e a função original.
 
-Já sebido que a primeira derivada representa a taxa de variação de um ponto na
+Já sabido que a primeira derivada representa a taxa de variação de um ponto na
 curva, a segunda derivada proporciona informações complementares, como por
 exemplo, se é um ponto de máximo, mínimo ou inflexão, de modo que ela determina
 a concavidade da curva naquele ponto. Como pode-se ver na Figura
@@ -179,6 +179,51 @@ ressaltar que é importante o estudo do gráfico das derivadas de uma função.
 \section{{Programando o Método}}
 
 \hspace{0.8cm}
+
+
+A própria definição da derivada já nos oferece uma uma visão simples de como
+ela pode ser implementada num programa de computador. Mas com alguns nuances
+que devem ser levados em consideração. Segue a tal implementação:
+
+\input{./projetos/rust_derive1x1_v1.tex}
+
+Essa implementação é ingenua no que se diz respeito a precisão da operação. O
+uso depende da aplicação, caso se queira prezar por velocidade de calculo e 
+muito pouco sobre precisão, talvez essa solução seja boa o suficiente. O
+problema com com precisão desta implementação é que não se é levado em
+consideração o aspecto infinitesimal da variação (\(\Delta X\) na figura 1.2, ou
+a variável h na implementação em Rust), já que é por este aspecto que
+definimos a derivada. Não temos como ter uma variável com tal propriedade num
+programa de computador. Como consequência, \(f(x + h) - f(x)\) já é calculada
+de forma falha, entregando uma variação diferente da que seria quando se tem
+uma variável infinitesimal. O que de fato é entregue é a variação um pouco mais
+a frente do ponto esperado.
+
+A partir dai podemos reformular considerando esse deslocamento, redefinindo
+da seguinte forma:
+
+
+\begin{equation}
+    f'(x) = \frac{f(x + h) - f(x - h)}{2h}
+\end{equation}
+
+Que é equivalente à:
+
+\begin{equation}
+    f'(x) = \frac{f(x + h) - f(x - h)}{(x + h) - (x - h)}
+\end{equation}
+
+
+Usaremos essa segunda formulação por motivos de custo de multiplicação de de
+números reais se comparado a somas e subtrações, além da possível perca de
+precisão. Assim conseguimos compensar o tal deslocamento numa nova função
+insignificantemente mais custosa e mais precisa:
+
+
+\input{./projetos/rust_derive1x1_v2.tex}
+
+
+
 
 
 \textcolor[rgb]{1,0,0}{\section{{Otimização de Funções à Várias Variáveis}}}
